--- a/style.css
+++ b/style.css
@@ -671,7 +671,7 @@ a:visited {
 
 .pc_container {
     position: absolute;
-    bottom: 33vh;
+    bottom: 33%;
     left: 0;
     width: 100%;
     text-align: center;
@@ -783,7 +783,7 @@ a:visited {
 
     .pc-detail img {
         width: 70%;
-        max-width: 435px;
+        max-width: 390px;
     }
 
     
