--- a/style.css
+++ b/style.css
@@ -111,6 +111,14 @@ a:visited {
     height: auto;
 }
 
+.pas-container > * {
+    transition: transform 0.3s ease-in-out;
+  }
+  
+  .pas-container > *:hover {
+    transform: scale(1.2);
+  }
+
 
 
 
@@ -693,10 +701,10 @@ a:visited {
 
 @keyframes pulseGlow3 {
     0% {
-        filter: drop-shadow(0px 0px 5px rgba(255, 255, 255, 0.6));
+        filter: drop-shadow(0px 0px 5px rgba(115, 109, 176, 0.4));
     }
     100% {
-        filter: drop-shadow(0px 0px 15px rgba(255, 255, 255, 0.8));
+        filter: drop-shadow(0px 0px 15px rgba(115, 109, 176, 0.6));
     }
 }
 
